--- a/.github/workflows/build-toochain.yml
+++ b/.github/workflows/build-toochain.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    name: Build Kernel by ${{ github.actor }}
+    name: Build Toolchain by ${{ github.actor }}
     runs-on: ubuntu-22.04-arm
     if: github.event.repository.owner.id == github.event.sender.id
     env:
@@ -26,7 +26,7 @@ jobs:
       with:
         swap-size-gb: 10
 
-    - name: Setup build kernel environment
+    - name: Setup build environment
       run: |
         echo "BUILD_TIME=$(TZ=Asia/Shanghai date "+%Y%m%d%H%M")" >> $GITHUB_ENV
         echo "DEVICE=$(echo ${{ env.KERNEL_CONFIG }} | sed 's!vendor/!!;s/_defconfig//;s/_user//;s/-perf//')" >> $GITHUB_ENV
