--- a/.github/workflows/static-docker.yml
+++ b/.github/workflows/static-docker.yml
@@ -57,9 +57,9 @@ jobs:
         cd moby
         git checkout 24.0
         make binary
-        sudo install -Dm 0700 bundles/binary-daemon/dockerd $PREFIX/bin/libexec/dockerd-dev
-        sudo install -Dm 0700 bundles/binary-daemon/docker-init $PREFIX/bin/libexec/docker-init
-        sudo install -Dm 0700 bundles/binary-daemon/docker-proxy $PREFIX/bin/libexec/docker-proxy
+        sudo install -Dm 0700 $GITHUB_WORKSPACE/kernel_workspace/moby/bundles/binary-daemon/dockerd $PREFIX/bin/libexec/dockerd-dev
+        #sudo install -Dm 0700 $GITHUB_WORKSPACE/kernel_workspace/moby/bundles/binary-daemon/docker-init $PREFIX/bin/libexec/docker-init
+        sudo install -Dm 0700 $GITHUB_WORKSPACE/kernel_workspace/moby/bundles/binary-daemon/docker-proxy $PREFIX/bin/libexec/docker-proxy
         
         
         
