--- a/.github/workflows/android-llama.yml
+++ b/.github/workflows/android-llama.yml
@@ -44,7 +44,7 @@ jobs:
         cd $GITHUB_WORKSPACE/kernel_workspace
         export PREFIX=/data/llama
         export ANDROID_NDK=$GITHUB_WORKSPACE/kernel_workspace/android-ndk-r28
-        git cone https://github.com/ggml-org/llama.cpp.git llama
+        git clone https://github.com/ggml-org/llama.cpp.git llama
         cd llama
         cmake -DCMAKE_TOOLCHAIN_FILE=$ANDROID_NDK/build/cmake/android.toolchain.cmake \
                 -DANDROID_ABI=arm64-v8a \
