--- a/.github/workflows/build-toochain.yml
+++ b/.github/workflows/build-toochain.yml
@@ -65,13 +65,13 @@ jobs:
         cd $GITHUB_WORKSPACE/kernel_workspace
         wget https://raw.githubusercontent.com/tomxi1997/builder-docker/main/llvm/build-electron-binutils.sh
         chmod +x *.sh
-        ./build-electron-binutils.sh
+        sudo ./build-electron-binutils.sh
         cd $GITHUB_WORKSPACE/kernel_workspace
         git clone https://github.com/ClangBuiltLinux/tc-build
         cd tc-build
         chmod +x *.py
         #./build-binutils.py --targets arm aarch64 -i $GITHUB_WORKSPACE/kernel_workspace/toolchain
-        ./build-llvm.py -t AArch64 ARM --vendor-string "Electron" -i $GITHUB_WORKSPACE/kernel_workspace/toolchain
+         sudo ./build-llvm.py -t AArch64 ARM --vendor-string "Electron" -i $GITHUB_WORKSPACE/kernel_workspace/toolchain
         
           
         
