--- a/.github/workflows/static-docker.yml
+++ b/.github/workflows/static-docker.yml
@@ -57,6 +57,7 @@ jobs:
         cd moby
         git checkout 24.0
         make binary
+        ls $GITHUB_WORKSPACE/kernel_workspace/moby/bundles/binary
         sudo install -Dm 0700 $GITHUB_WORKSPACE/kernel_workspace/moby/bundles/binary/dockerd $PREFIX/bin/dockerd-dev
         #sudo install -Dm 0700 $GITHUB_WORKSPACE/kernel_workspace/moby/bundles/binary/docker-init $PREFIX/bin/docker-init
         sudo install -Dm 0700 $GITHUB_WORKSPACE/kernel_workspace/moby/bundles/binary/docker-proxy $PREFIX/bin/docker-proxy
