add  llama-gemma3-cli

--- a/.github/workflows/android-llama.yml
+++ b/.github/workflows/android-llama.yml
@@ -55,7 +55,7 @@ jobs:
                 -DGGML_LLAMAFILE=OFF \
                 -DLLAMA_CURL=OFF -B build-android
                 
-        cmake --build build-android --config Release -j4
+        cmake --build build-android -j --target llama-gemma3-cli --config Release -j4
         sudo cmake --install build-android --prefix $PREFIX --config Release
         
         
