--- a/.github/workflows/android-llama.yml
+++ b/.github/workflows/android-llama.yml
@@ -55,8 +55,8 @@ jobs:
                 -DGGML_LLAMAFILE=OFF \
                 -DLLAMA_CURL=OFF -B build-android
                 
-        cmake --build build-android -j --target llama-gemma3-cli --config Release -j4
-        sudo cmake --install build-android --prefix $PREFIX  -j --target llama-gemma3-cli --config Release
+        cmake --build build-android --target llama-gemma3-cli --config Release 
+        sudo cmake --install build-android --prefix $PREFIX --strip
         
         
         
