--- a/.github/workflows/android-opencl-llama.yml
+++ b/.github/workflows/android-opencl-llama.yml
@@ -67,7 +67,7 @@ jobs:
         export ANDROID_NDK=$GITHUB_WORKSPACE/kernel_workspace/android-ndk-r28
         git clone https://github.com/ggml-org/llama.cpp.git llama
         cd llama
-        cmake .. -G Ninja \
+        cmake -G Ninja \
                  -DCMAKE_TOOLCHAIN_FILE=$ANDROID_NDK/build/cmake/android.toolchain.cmake \
                  -DANDROID_ABI=arm64-v8a \
                  -DCMAKE_BUILD_TYPE=Release \
