--- a/.github/workflows/build-toochain.yml
+++ b/.github/workflows/build-toochain.yml
@@ -71,7 +71,7 @@ jobs:
         cd tc-build
         chmod +x *.py
         ./build-binutils.py --targets arm aarch64 -i $GITHUB_WORKSPACE/kernel_workspace/toolchain
-        sudo ./build-llvm.py -t AArch64 ARM --vendor-string "Electron" -i $GITHUB_WORKSPACE/kernel_workspace/toolchain
+        sudo ./build-llvm.py -t AArch64 ARM --vendor-string "Electron" -i $GITHUB_WORKSPACE/kernel_workspace/toolchain --lto full --pgo kernel-defconfig
         
           
         
