--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -1,13 +1,7 @@
-# 基于 ARM64 官方镜像，替换为阿里云源
 FROM arm64v8/ubuntu:22.04
-
-# 关键：替换 apt 源为阿里云（解决官方源慢的问题）
-RUN echo "deb http://mirrors.aliyun.com/ubuntu/ jammy main restricted universe multiverse" > /etc/apt/sources.list && \
-    echo "deb http://mirrors.aliyun.com/ubuntu/ jammy-updates main restricted universe multiverse" >> /etc/apt/sources.list && \
-    echo "deb http://mirrors.aliyun.com/ubuntu/ jammy-backports main restricted universe multiverse" >> /etc/apt/sources.list && \
-    echo "deb http://mirrors.aliyun.com/ubuntu/ jammy-security main restricted universe multiverse" >> /etc/apt/sources.list && \
-    # 安装基础工具并清理缓存（减小体积）
-    apt-get update && \
-    apt-get install -y --no-install-recommends ca-certificates apt-transport-https && \
+RUN sed -i -e 's@//ports.ubuntu.com/\? @//ports.ubuntu.com/ubuntu-ports @g' \
+            -e 's@//ports.ubuntu.com@//mirrors.ustc.edu.cn@g' \
+            /etc/apt/sources.list && apt-get update && \
+    apt-get install -y --no-install-recommends ca-certificates && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
